--- a/.gitignore
+++ b/.gitignore
@@ -110,3 +110,8 @@ Desktop.ini
 # ==============================================================================
 /coverage/
 *.lcov
+
+# ==============================================================================
+# Documentation & Internal Files
+# ==============================================================================
+DocsFile/
