--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -31,23 +31,28 @@ jobs:
         run: flutter pub get
 
       - name: Decode Keystore
-        if: ${{ secrets.KEYSTORE_BASE64 != '' }}
         env:
             KEYSTORE_BASE64: ${{ secrets.KEYSTORE_BASE64 }}
         run: |
-          echo "$KEYSTORE_BASE64" | base64 --decode > android/app/upload-keystore.jks
+          if [ -n "$KEYSTORE_BASE64" ]; then
+            echo "$KEYSTORE_BASE64" | base64 --decode > android/app/upload-keystore.jks
+          else
+            echo "Warning: KEYSTORE_BASE64 secret is not set. Skipping keystore generation."
+          fi
 
       - name: Create key.properties
-        if: ${{ secrets.KEYSTORE_BASE64 != '' }}
         env:
+            KEYSTORE_BASE64: ${{ secrets.KEYSTORE_BASE64 }}
             KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
             ALIAS_PASSWORD: ${{ secrets.ALIAS_PASSWORD }}
             KEY_ALIAS: ${{ secrets.KEY_ALIAS }}
         run: |
-          echo "storePassword=$KEY_PASSWORD" > android/key.properties
-          echo "keyPassword=$ALIAS_PASSWORD" >> android/key.properties
-          echo "keyAlias=$KEY_ALIAS" >> android/key.properties
-          echo "storeFile=upload-keystore.jks" >> android/key.properties
+          if [ -n "$KEYSTORE_BASE64" ]; then
+            echo "storePassword=$KEY_PASSWORD" > android/key.properties
+            echo "keyPassword=$ALIAS_PASSWORD" >> android/key.properties
+            echo "keyAlias=$KEY_ALIAS" >> android/key.properties
+            echo "storeFile=upload-keystore.jks" >> android/key.properties
+          fi
 
       - name: Build APK
         run: flutter build apk --release
@@ -60,12 +65,11 @@ jobs:
         with:
           name: release-apk
           path: build/app/outputs/flutter-apk/app-release.apk
-          if-no-files-found: error
+          if-no-files-found: warn
 
       - name: Upload Release AAB
         uses: actions/upload-artifact@v4
         with:
           name: release-aab
           path: build/app/outputs/bundle/release/app-release.aab
-          if-no-files-found: error
-
+          if-no-files-found: warn
