--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -35,7 +35,7 @@ jobs:
             KEYSTORE_BASE64: ${{ secrets.KEYSTORE_BASE64 }}
         run: |
           if [ -n "$KEYSTORE_BASE64" ]; then
-            echo "$KEYSTORE_BASE64" | base64 --decode > android/app/upload-keystore.jks
+            echo "$KEYSTORE_BASE64" | base64 -d --ignore-garbage > android/app/upload-keystore.jks
           else
             echo "Warning: KEYSTORE_BASE64 secret is not set. Skipping keystore generation."
           fi
