--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -5,10 +5,10 @@
 // 'flutter create' template.
 
 // The application's name. By default this is also the title of the Flutter window.
-PRODUCT_NAME = alowonle_poultry_manager
+PRODUCT_NAME = safehand_poultry_manager
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.alowonle.poultrymanager
+PRODUCT_BUNDLE_IDENTIFIER = com.safehand.poultrymanager
 
 // The copyright displayed in application information
-PRODUCT_COPYRIGHT = Copyright © 2025 com.alowonle. All rights reserved.
+PRODUCT_COPYRIGHT = Copyright © 2025 com.safehand. All rights reserved.
