--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -89,13 +89,13 @@ BEGIN
     BEGIN
         BLOCK "040904e4"
         BEGIN
-            VALUE "CompanyName", "com.alowonle" "\0"
-            VALUE "FileDescription", "Alowonle Poultry Manager" "\0"
+            VALUE "CompanyName", "com.safehand" "\0"
+            VALUE "FileDescription", "Safehand Poultry Manager" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "alowonle_poultry_manager" "\0"
-            VALUE "LegalCopyright", "Copyright (C) 2025 com.alowonle. All rights reserved." "\0"
-            VALUE "OriginalFilename", "alowonle_poultry_manager.exe" "\0"
-            VALUE "ProductName", "Alowonle Poultry Manager" "\0"
+            VALUE "InternalName", "safehand_poultry_manager" "\0"
+            VALUE "LegalCopyright", "Copyright (C) 2025 com.safehand. All rights reserved." "\0"
+            VALUE "OriginalFilename", "safehand_poultry_manager.exe" "\0"
+            VALUE "ProductName", "Safehand Poultry Manager" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
